Update demo user credentials in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row right">
             <button type="submit" class="btn primary">Sign in</button>
           </div>
-          <p class="muted">Demo users: <code>site.alex / password</code> (Site) • <code>office.mia / password</code> (Office)</p>
+          <p class="muted">Demo users: <code>site.mex / password</code> (Site) • <code>office.mia / password</code> (Office)</p>
         </form>
       </div>
     </div>
